--- a/css/scss/topoPesquisa.scss
+++ b/css/scss/topoPesquisa.scss
@@ -1,4 +1,14 @@
+
 .topoPesquisa{
+
+	.chkPerm{
+	    font-weight: bold;
+	    padding: 10px 0px;
+
+	    input{
+    	    margin-right: 3px;
+	    }
+	}
 
 	.tituloListaDados{
 		
