--- a/css/scss/busca.scss
+++ b/css/scss/busca.scss
@@ -82,6 +82,10 @@
 
   #resultado, #resultDataTable{
 
+    .dataTables_paginate, .dataTables_filter{
+      text-align: right;
+    }
+
     .google-visualization-table-table{
       width: 100% !important;
       margin-bottom: 20px;
