--- a/css/aquisition.css
+++ b/css/aquisition.css
@@ -4,6 +4,7 @@
   border: solid 1px;
   border-radius: 4px;
   border-color: #bce8f1;
+    margin-top: 50px;;
 }
 
 
@@ -50,6 +51,7 @@
 }
 
 #select_sensor{
+  margin-top: 50px;
   margin-bottom: 30px;
 }
 
