--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 #button_rule{
-       border:solid 1px;
+       /*border:solid 1px;*/
        overflow:auto;
        margin-bottom: 10px;
    }
@@ -21,12 +21,20 @@
       color: #ffffff;
       left: 100px;
       font-size: 14px;
-      padding: 6px 7px 4px 4px;
+      padding: 6px 7px 4px 4px;*/
       text-decoration: none;
+      /*margin-top: 150px;*/
       margin-bottom: 15px;
   }
+.container_rules{
+  padding-top: 100px;
+  padding-bottom: 100px
+  margin-top: 100px !important;
 
-
+}
+#padding_size{
+  padding-top: 40px;
+}
 
 .select_rules_context{
     margin-top: 5px;
