--- a/css/main.css
+++ b/css/main.css
@@ -1,37 +1,50 @@
 #button_rule{
        /*border:solid 1px;*/
        overflow:auto;
+       padding-top: 30px;
        margin-bottom: 10px;
    }
+.button_rule {
+         background: #142b55;
+         -webkit-border-radius: 5;
+         -moz-border-radius: 5;
+         border-radius: 5px;
+         border-color: #142b55;
+         font-family: Arial;
+         color: #ffffff;
+         left: 100px;
+         font-size: 14px;
+         padding: 6px 7px 4px 4px;*/
+         text-decoration: none;
+         margin-top: 30px !important;
+         margin-bottom: 15px;
+     }
 
 #div_action{
   margin-top: 5 px;
 }
 #div_conditions{
   border: double 0px;
-  border-color: red;
+  /*border-color: red;*/
 }
-.button_rule {
-      background: #142b55;
-      -webkit-border-radius: 5;
-      -moz-border-radius: 5;
-      border-radius: 5px;
-      border-color: #142b55;
-      font-family: Arial;
-      color: #ffffff;
-      left: 100px;
-      font-size: 14px;
-      padding: 6px 7px 4px 4px;*/
-      text-decoration: none;
-      /*margin-top: 150px;*/
-      margin-bottom: 15px;
-  }
+
 .container_rules{
   padding-top: 100px;
-  padding-bottom: 100px
+  padding-bottom: 100px;
   margin-top: 100px !important;
 
 }
+#label_name_rule{
+    margin-top: 9px;
+}
+/*#name_rule{
+    margin-top: 30px;
+}*/
+#label_name_sensor{
+  text-align:right;
+  margin-top: 9px;
+}
+
 #padding_size{
   padding-top: 40px;
 }
@@ -40,3 +53,6 @@
     margin-top: 5px;
     margin-bottom: 5px;
 }
+/*#sensors{
+  margin-top: 30px;
+}*/
