--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+#addRule{
+  cursor: pointer;
+}
+
 #button_rule{
        /*border:solid 1px;*/
        overflow:auto;
@@ -34,6 +38,9 @@
   margin-top: 100px !important;
 
 }
+.fa-2x{
+  padding-top: 9px;
+}
 #label_name_rule{
     margin-top: 9px;
 }
@@ -56,6 +63,7 @@
 
 .remove{
   color: red;
+  padding-left: 5px;
 }
 /*#sensors{
   margin-top: 30px;
