--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,13 @@
   color: red;
   padding-left: 5px;
 }
+.status{
+    display: none;
+}
+
+.time{
+  display: none;
+}
 /*#sensors{
   margin-top: 30px;
 }*/
