reorganize parameters of actions. Add comments of code. Rules edge server almost 100% functional:Το επόμενο θα πρέπει να επαναλάβετε τον κωδικό, καλή τύχη

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,9 @@
 #addRule{
   cursor: pointer;
 }
-
+.alter_labels{
+   font-weight: bold;
+}
 #button_rule{
        /*border:solid 1px;*/
        overflow:auto;
